10/30/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_ECS_TaskSet.json
+++ b/internal/service/cloudformation/schemas/AWS_ECS_TaskSet.json
@@ -1,9 +1,15 @@
 {
   "sourceUrl": "https://github.com/aws-cloudformation/aws-cloudformation-resource-providers-ecs.git",
   "tagging": {
+    "permissions": [
+      "ecs:TagResource",
+      "ecs:UntagResource",
+      "ecs:ListTagsForResource"
+    ],
     "taggable": true,
     "tagOnCreate": true,
     "tagUpdatable": true,
+    "tagProperty": "/properties/Tags",
     "cloudFormationSystemTags": false
   },
   "handlers": {
