--- a/internal/service/cloudformation/schemas/AWS_Route53Profiles_ProfileAssociation.json
+++ b/internal/service/cloudformation/schemas/AWS_Route53Profiles_ProfileAssociation.json
@@ -73,6 +73,7 @@
     "/properties/ResourceId",
     "/properties/ProfileId"
   ],
+  "replacementStrategy": "delete_then_create",
   "primaryIdentifier": [
     "/properties/Id"
   ],
