--- a/internal/service/cloudformation/schemas/AWS_SageMaker_StudioLifecycleConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_SageMaker_StudioLifecycleConfig.json
@@ -22,7 +22,7 @@
     },
     "StudioLifecycleConfigContent": {
       "type": "string",
-      "description": "The content of your Amazon SageMaker Studio Lifecycle Configuration script.",
+      "description": "The content of your Amazon SageMaker Studio Lifecycle Configuration script. This content must be base64 encoded.",
       "minLength": 1,
       "maxLength": 16384,
       "pattern": "[\\S\\s]+"
@@ -36,7 +36,7 @@
     },
     "Tags": {
       "type": "array",
-      "description": "Tags to be associated with the Lifecycle Configuration.",
+      "description": "Tags to be associated with the Lifecycle Configuration. Each tag consists of a key and an optional value. Tag keys must be unique per resource. Tags are searchable using the Search API.",
       "uniqueItems": false,
       "insertionOrder": false,
       "items": {
