11/08/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_ApiGateway_BasePathMapping.json
+++ b/internal/service/cloudformation/schemas/AWS_ApiGateway_BasePathMapping.json
@@ -6,19 +6,19 @@
   "properties": {
     "BasePath": {
       "type": "string",
-      "description": "The base path name that callers of the API must provide as part of the URL after the domain name."
+      "description": ""
     },
     "DomainName": {
       "type": "string",
-      "description": "The domain name of the BasePathMapping resource to be described."
+      "description": ""
     },
     "RestApiId": {
       "type": "string",
-      "description": "The string identifier of the associated RestApi."
+      "description": ""
     },
     "Stage": {
       "type": "string",
-      "description": "The name of the associated stage."
+      "description": ""
     }
   },
   "required": [
