--- a/internal/service/cloudformation/schemas/AWS_IoTSiteWise_Project.json
+++ b/internal/service/cloudformation/schemas/AWS_IoTSiteWise_Project.json
@@ -65,7 +65,18 @@
     }
   },
   "additionalProperties": false,
-  "taggable": true,
+  "tagging": {
+    "taggable": true,
+    "tagOnCreate": true,
+    "tagUpdatable": true,
+    "cloudFormationSystemTags": true,
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "iotsitewise:TagResource",
+      "iotsitewise:UntagResource",
+      "iotsitewise:ListTagsForResource"
+    ]
+  },
   "required": [
     "PortalId",
     "ProjectName"
@@ -118,7 +129,8 @@
     },
     "list": {
       "permissions": [
-        "iotsitewise:ListProjects"
+        "iotsitewise:ListProjects",
+        "iotsitewise:ListTagsForResource"
       ]
     }
   }
