--- a/internal/service/cloudformation/schemas/AWS_IoTWireless_NetworkAnalyzerConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_IoTWireless_NetworkAnalyzerConfiguration.json
@@ -104,9 +104,14 @@
   "tagging": {
     "taggable": true,
     "tagOnCreate": true,
-    "tagUpdatable": false,
+    "tagUpdatable": true,
     "cloudFormationSystemTags": false,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "iotwireless:TagResource",
+      "iotwireless:UntagResource",
+      "iotwireless:ListTagsForResource"
+    ]
   },
   "required": [
     "Name"
@@ -115,8 +120,7 @@
     "/properties/Arn"
   ],
   "createOnlyProperties": [
-    "/properties/Name",
-    "/properties/Tags"
+    "/properties/Name"
   ],
   "primaryIdentifier": [
     "/properties/Name"
@@ -125,8 +129,7 @@
     "create": {
       "permissions": [
         "iotwireless:CreateNetworkAnalyzerConfiguration",
-        "iotwireless:TagResource",
-        "iotwireless:ListTagsForResource"
+        "iotwireless:TagResource"
       ]
     },
     "read": {
@@ -138,8 +141,9 @@
     "update": {
       "permissions": [
         "iotwireless:UpdateNetworkAnalyzerConfiguration",
-        "iotwireless:UntagResource",
-        "iotwireless:ListTagsForResource"
+        "iotwireless:GetNetworkAnalyzerConfiguration",
+        "iotwireless:TagResource",
+        "iotwireless:UntagResource"
       ]
     },
     "delete": {
