--- a/internal/service/cloudformation/schemas/AWS_SES_ConfigurationSet.json
+++ b/internal/service/cloudformation/schemas/AWS_SES_ConfigurationSet.json
@@ -27,6 +27,12 @@
         "SendingPoolName": {
           "type": "string",
           "description": "The name of the dedicated IP pool to associate with the configuration set."
+        },
+        "MaxDeliverySeconds": {
+          "type": "number",
+          "description": "Specifies the maximum time until which SES will retry sending emails",
+          "minimum": 300,
+          "maximum": 50400
         }
       }
     },
