2024/11/21 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_ApplicationSignals_ServiceLevelObjective.json
+++ b/internal/service/cloudformation/schemas/AWS_ApplicationSignals_ServiceLevelObjective.json
@@ -50,6 +50,9 @@
     },
     "Tags": {
       "$ref": "#/definitions/Tags"
+    },
+    "BurnRateConfigurations": {
+      "$ref": "#/definitions/BurnRateConfigurations"
     }
   },
   "required": [
@@ -443,6 +446,33 @@
       "required": [
         "Key",
         "Value"
+      ]
+    },
+    "BurnRateConfigurations": {
+      "description": "Each object in this array defines the length of the look-back window used to calculate one burn rate metric for this SLO. The burn rate measures how fast the service is consuming the error budget, relative to the attainment goal of the SLO.",
+      "type": "array",
+      "uniqueItems": true,
+      "insertionOrder": false,
+      "items": {
+        "$ref": "#/definitions/BurnRateConfiguration"
+      },
+      "minItems": 0,
+      "maxItems": 10
+    },
+    "BurnRateConfiguration": {
+      "type": "object",
+      "description": "This object defines the length of the look-back window used to calculate one burn rate metric for this SLO. The burn rate measures how fast the service is consuming the error budget, relative to the attainment goal of the SLO. A burn rate of exactly 1 indicates that the SLO goal will be met exactly.\nFor example, if you specify 60 as the number of minutes in the look-back window, the burn rate is calculated as the following:\nburn rate = error rate over the look-back window / (1 - attainment goal percentage)",
+      "additionalProperties": false,
+      "properties": {
+        "LookBackWindowMinutes": {
+          "description": "The number of minutes to use as the look-back window.",
+          "type": "integer",
+          "minimum": 1,
+          "maximum": 10080
+        }
+      },
+      "required": [
+        "LookBackWindowMinutes"
       ]
     }
   },
