--- a/internal/service/cloudformation/schemas/AWS_Chatbot_SlackChannelConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_Chatbot_SlackChannelConfiguration.json
@@ -147,6 +147,11 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": true,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "chatbot:TagResource",
+      "chatbot:ListTagsForResource",
+      "chatbot:UntagResource"
+    ]
   }
 }
