--- a/internal/service/cloudformation/schemas/AWS_EntityResolution_IdMappingWorkflow.json
+++ b/internal/service/cloudformation/schemas/AWS_EntityResolution_IdMappingWorkflow.json
@@ -1,5 +1,10 @@
 {
   "tagging": {
+    "permissions": [
+      "entityresolution:TagResource",
+      "entityresolution:UntagResource",
+      "entityresolution:ListTagsForResource"
+    ],
     "taggable": true,
     "tagOnCreate": true,
     "tagUpdatable": true,
