--- a/internal/service/cloudformation/schemas/AWS_GroundStation_Config.json
+++ b/internal/service/cloudformation/schemas/AWS_GroundStation_Config.json
@@ -304,6 +304,18 @@
   "primaryIdentifier": [
     "/properties/Arn"
   ],
+  "tagging": {
+    "taggable": true,
+    "tagOnCreate": true,
+    "tagUpdatable": true,
+    "cloudFormationSystemTags": true,
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "groundstation:TagResource",
+      "groundstation:UntagResource",
+      "groundstation:ListTagsForResource"
+    ]
+  },
   "handlers": {
     "create": {
       "permissions": [
