--- a/internal/service/cloudformation/schemas/AWS_InspectorV2_CisScanConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_InspectorV2_CisScanConfiguration.json
@@ -130,7 +130,8 @@
       },
       "additionalProperties": false,
       "required": [
-        "AccountIds"
+        "AccountIds",
+        "TargetResourceTags"
       ]
     },
     "TargetResourceTags": {
