--- a/internal/service/cloudformation/schemas/AWS_OpenSearchServerless_SecurityConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_OpenSearchServerless_SecurityConfig.json
@@ -48,8 +48,55 @@
       "type": "string",
       "description": "Config type for security config",
       "enum": [
-        "saml"
+        "saml",
+        "iamidentitycenter"
       ]
+    },
+    "IamIdentityCenterInstanceArn": {
+      "type": "string",
+      "description": "The ARN of the IAM Identity Center instance used to integrate with OpenSearch Serverless"
+    },
+    "IamIdentityCenterApplicationArn": {
+      "type": "string",
+      "description": "The ARN of the IAM Identity Center application used to integrate with OpenSearch Serverless"
+    },
+    "IamIdentityCenterUserAttribute": {
+      "type": "string",
+      "description": "User attribute for this IAM Identity Center integration"
+    },
+    "IamIdentityCenterGroupAttribute": {
+      "type": "string",
+      "description": "Group attribute for this IAM Identity Center integration"
+    },
+    "IamIdentityCenterConfigOptions": {
+      "type": "object",
+      "description": "Describes IAM Identity Center options for an OpenSearch Serverless security configuration in the form of a key-value map",
+      "properties": {
+        "InstanceArn": {
+          "$ref": "#/definitions/IamIdentityCenterInstanceArn"
+        },
+        "ApplicationArn": {
+          "$ref": "#/definitions/IamIdentityCenterApplicationArn"
+        },
+        "ApplicationName": {
+          "type": "string",
+          "description": "The name of the IAM Identity Center application used to integrate with OpenSearch Serverless"
+        },
+        "ApplicationDescription": {
+          "type": "string",
+          "description": "The description of the IAM Identity Center application used to integrate with OpenSearch Serverless"
+        },
+        "UserAttribute": {
+          "$ref": "#/definitions/IamIdentityCenterUserAttribute"
+        },
+        "GroupAttribute": {
+          "$ref": "#/definitions/IamIdentityCenterGroupAttribute"
+        }
+      },
+      "required": [
+        "InstanceArn"
+      ],
+      "additionalProperties": false
     }
   },
   "properties": {
@@ -75,19 +122,26 @@
     "SamlOptions": {
       "$ref": "#/definitions/SamlConfigOptions"
     },
+    "IamIdentityCenterOptions": {
+      "$ref": "#/definitions/IamIdentityCenterConfigOptions"
+    },
     "Type": {
       "$ref": "#/definitions/SecurityConfigType"
     }
   },
   "readOnlyProperties": [
-    "/properties/Id"
+    "/properties/Id",
+    "/properties/IamIdentityCenterOptions/ApplicationArn",
+    "/properties/IamIdentityCenterOptions/ApplicationName",
+    "/properties/IamIdentityCenterOptions/ApplicationDescription"
   ],
   "writeOnlyProperties": [
     "/properties/Name"
   ],
   "createOnlyProperties": [
     "/properties/Type",
-    "/properties/Name"
+    "/properties/Name",
+    "/properties/IamIdentityCenterOptions/InstanceArn"
   ],
   "primaryIdentifier": [
     "/properties/Id"
@@ -100,7 +154,13 @@
   "handlers": {
     "create": {
       "permissions": [
-        "aoss:CreateSecurityConfig"
+        "aoss:CreateSecurityConfig",
+        "sso:CreateApplication",
+        "sso:ListApplications",
+        "sso:DeleteApplication",
+        "sso:PutApplicationAssignmentConfiguration",
+        "sso:PutApplicationAuthenticationMethod",
+        "sso:PutApplicationGrant"
       ]
     },
     "read": {
@@ -116,7 +176,10 @@
     },
     "delete": {
       "permissions": [
-        "aoss:DeleteSecurityConfig"
+        "aoss:DeleteSecurityConfig",
+        "sso:ListApplicationAssignments",
+        "sso:DeleteApplicationAssignment",
+        "sso:DeleteApplication"
       ]
     },
     "list": {
