--- a/internal/service/cloudformation/schemas/AWS_SageMaker_Project.json
+++ b/internal/service/cloudformation/schemas/AWS_SageMaker_Project.json
@@ -182,6 +182,18 @@
     "ProjectName",
     "ServiceCatalogProvisioningDetails"
   ],
+  "tagging": {
+    "taggable": true,
+    "tagOnCreate": true,
+    "tagUpdatable": true,
+    "cloudFormationSystemTags": false,
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "sagemaker:AddTags",
+      "sagemaker:ListTags",
+      "sagemaker:DeleteTags"
+    ]
+  },
   "readOnlyProperties": [
     "/properties/ProjectArn",
     "/properties/CreationTime",
