--- a/internal/service/cloudformation/schemas/AWS_DMS_MigrationProject.json
+++ b/internal/service/cloudformation/schemas/AWS_DMS_MigrationProject.json
@@ -7,7 +7,12 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": false,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "dms:AddTagsToResource",
+      "dms:RemoveTagsFromResource",
+      "dms:ListTagsForResource"
+    ]
   },
   "definitions": {
     "Tag": {
@@ -194,7 +199,7 @@
         "dms:UpdateMigrationProject",
         "dms:ModifyMigrationProject",
         "dms:AddTagsToResource",
-        "dms:RemoveTagsToResource",
+        "dms:RemoveTagsFromResource",
         "dms:ListTagsForResource",
         "iam:PassRole"
       ]
