--- a/internal/service/cloudformation/schemas/AWS_Wisdom_KnowledgeBase.json
+++ b/internal/service/cloudformation/schemas/AWS_Wisdom_KnowledgeBase.json
@@ -33,7 +33,8 @@
       "enum": [
         "EXTERNAL",
         "CUSTOM",
-        "MESSAGE_TEMPLATES"
+        "MESSAGE_TEMPLATES",
+        "MANAGED"
       ]
     },
     "RenderingConfiguration": {
@@ -58,21 +59,281 @@
       },
       "additionalProperties": false
     },
-    "SourceConfiguration": {
+    "SeedUrl": {
       "type": "object",
+      "additionalProperties": false,
       "properties": {
-        "AppIntegrations": {
-          "$ref": "#/definitions/AppIntegrationsConfiguration"
+        "Url": {
+          "type": "string",
+          "pattern": "^https?://[A-Za-z0-9][^\\s]*$"
         }
+      }
+    },
+    "UrlFilterPattern": {
+      "type": "string",
+      "maxLength": 1000,
+      "minLength": 1
+    },
+    "UrlFilterList": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/UrlFilterPattern"
       },
-      "oneOf": [
-        {
-          "required": [
-            "AppIntegrations"
+      "maxItems": 25,
+      "minItems": 1
+    },
+    "WebCrawlerConfiguration": {
+      "type": "object",
+      "additionalProperties": false,
+      "properties": {
+        "UrlConfiguration": {
+          "type": "object",
+          "additionalProperties": false,
+          "properties": {
+            "SeedUrls": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/SeedUrl"
+              },
+              "maxItems": 100,
+              "minItems": 1
+            }
+          }
+        },
+        "CrawlerLimits": {
+          "type": "object",
+          "additionalProperties": false,
+          "properties": {
+            "RateLimit": {
+              "type": "number",
+              "minimum": 1,
+              "maximum": 3000
+            }
+          }
+        },
+        "InclusionFilters": {
+          "$ref": "#/definitions/UrlFilterList"
+        },
+        "ExclusionFilters": {
+          "$ref": "#/definitions/UrlFilterList"
+        },
+        "Scope": {
+          "type": "string",
+          "enum": [
+            "HOST_ONLY",
+            "SUBDOMAINS"
           ]
         }
-      ],
-      "additionalProperties": false
+      },
+      "required": [
+        "UrlConfiguration"
+      ]
+    },
+    "ManagedSourceConfiguration": {
+      "oneOf": [
+        {
+          "type": "object",
+          "properties": {
+            "WebCrawlerConfiguration": {
+              "$ref": "#/definitions/WebCrawlerConfiguration"
+            }
+          },
+          "required": [
+            "WebCrawlerConfiguration"
+          ],
+          "additionalProperties": false
+        }
+      ]
+    },
+    "FixedSizeChunkingConfiguration": {
+      "type": "object",
+      "additionalProperties": false,
+      "properties": {
+        "MaxTokens": {
+          "type": "number",
+          "minimum": 1
+        },
+        "OverlapPercentage": {
+          "type": "number",
+          "minimum": 1,
+          "maximum": 99
+        }
+      },
+      "required": [
+        "MaxTokens",
+        "OverlapPercentage"
+      ]
+    },
+    "HierarchicalChunkingLevelConfiguration": {
+      "type": "object",
+      "additionalProperties": false,
+      "properties": {
+        "MaxTokens": {
+          "type": "number",
+          "minimum": 1,
+          "maximum": 8192
+        }
+      },
+      "required": [
+        "MaxTokens"
+      ]
+    },
+    "HierarchicalChunkingConfiguration": {
+      "type": "object",
+      "additionalProperties": false,
+      "properties": {
+        "LevelConfigurations": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/HierarchicalChunkingLevelConfiguration"
+          },
+          "maxItems": 2,
+          "minItems": 2
+        },
+        "OverlapTokens": {
+          "type": "number",
+          "minimum": 1
+        }
+      },
+      "required": [
+        "LevelConfigurations",
+        "OverlapTokens"
+      ]
+    },
+    "SemanticChunkingConfiguration": {
+      "type": "object",
+      "additionalProperties": false,
+      "properties": {
+        "MaxTokens": {
+          "type": "number",
+          "minimum": 1
+        },
+        "BufferSize": {
+          "type": "number",
+          "minimum": 0,
+          "maximum": 1
+        },
+        "BreakpointPercentileThreshold": {
+          "type": "number",
+          "minimum": 50,
+          "maximum": 99
+        }
+      },
+      "required": [
+        "MaxTokens",
+        "BufferSize",
+        "BreakpointPercentileThreshold"
+      ]
+    },
+    "BedrockFoundationModelConfiguration": {
+      "type": "object",
+      "additionalProperties": false,
+      "properties": {
+        "ModelArn": {
+          "type": "string",
+          "maxLength": 2048,
+          "minLength": 1,
+          "pattern": "^arn:aws(-[^:]+)?:bedrock:[a-z0-9-]{1,20}::foundation-model\\/anthropic.claude-3-haiku-20240307-v1:0$"
+        },
+        "ParsingPrompt": {
+          "type": "object",
+          "additionalProperties": false,
+          "properties": {
+            "ParsingPromptText": {
+              "type": "string",
+              "maxLength": 10000,
+              "minLength": 1
+            }
+          },
+          "required": [
+            "ParsingPromptText"
+          ]
+        }
+      },
+      "required": [
+        "ModelArn"
+      ]
+    },
+    "VectorIngestionConfiguration": {
+      "type": "object",
+      "additionalProperties": false,
+      "properties": {
+        "ChunkingConfiguration": {
+          "type": "object",
+          "additionalProperties": false,
+          "properties": {
+            "ChunkingStrategy": {
+              "type": "string",
+              "enum": [
+                "FIXED_SIZE",
+                "NONE",
+                "HIERARCHICAL",
+                "SEMANTIC"
+              ]
+            },
+            "FixedSizeChunkingConfiguration": {
+              "$ref": "#/definitions/FixedSizeChunkingConfiguration"
+            },
+            "HierarchicalChunkingConfiguration": {
+              "$ref": "#/definitions/HierarchicalChunkingConfiguration"
+            },
+            "SemanticChunkingConfiguration": {
+              "$ref": "#/definitions/SemanticChunkingConfiguration"
+            }
+          },
+          "required": [
+            "ChunkingStrategy"
+          ]
+        },
+        "ParsingConfiguration": {
+          "type": "object",
+          "additionalProperties": false,
+          "properties": {
+            "ParsingStrategy": {
+              "type": "string",
+              "enum": [
+                "BEDROCK_FOUNDATION_MODEL"
+              ]
+            },
+            "BedrockFoundationModelConfiguration": {
+              "$ref": "#/definitions/BedrockFoundationModelConfiguration"
+            }
+          },
+          "required": [
+            "ParsingStrategy"
+          ]
+        }
+      }
+    },
+    "SourceConfiguration": {
+      "oneOf": [
+        {
+          "type": "object",
+          "title": "AppIntegrationsConfiguration",
+          "properties": {
+            "AppIntegrations": {
+              "$ref": "#/definitions/AppIntegrationsConfiguration"
+            }
+          },
+          "required": [
+            "AppIntegrations"
+          ],
+          "additionalProperties": false
+        },
+        {
+          "type": "object",
+          "title": "ManagedSourceConfiguration",
+          "properties": {
+            "ManagedSourceConfiguration": {
+              "$ref": "#/definitions/ManagedSourceConfiguration"
+            }
+          },
+          "required": [
+            "ManagedSourceConfiguration"
+          ],
+          "additionalProperties": false
+        }
+      ]
     },
     "Tag": {
       "additionalProperties": false,
@@ -127,6 +388,9 @@
     "SourceConfiguration": {
       "$ref": "#/definitions/SourceConfiguration"
     },
+    "VectorIngestionConfiguration": {
+      "$ref": "#/definitions/VectorIngestionConfiguration"
+    },
     "Tags": {
       "insertionOrder": false,
       "uniqueItems": true,
@@ -161,7 +425,16 @@
     ]
   ],
   "additionalProperties": false,
-  "taggable": false,
+  "tagging": {
+    "taggable": true,
+    "tagOnCreate": true,
+    "tagUpdatable": false,
+    "cloudFormationSystemTags": false,
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "wisdom:TagResource"
+    ]
+  },
   "replacementStrategy": "delete_then_create",
   "handlers": {
     "create": {
